# Gemma-Code

./: .gitignore  .vscodeignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  nightly.yml  release.yml
configs/: eslint.config.mjs  vitest.config.ts
docs/: DEVLOG.md  todos.md
docs/git/: gitignore-audit-2026-04-05-phase6.md  gitignore-audit-2026-04-05-phase7.md  gitignore-audit-2026-04-05-phase8.md  gitignore-audit-2026-04-05.md
docs/v0.1.0/: architecture.md  ci-setup.md  implementation-plan.md  performance-benchmarks.md  security-audit.md  testing.md  tool-protocol.md
docs/v0.2.0/: architecture.md
scripts/: build-vsix.ps1
scripts/installer/: build-installer.ps1  setup.nsi
src/: extension.ts
src/agents/: SubAgentManager.ts  SubAgentPrompts.ts  types.ts
src/backend/: BackendManager.ts  pyproject.toml
src/backend/src/backend/: config.py  main.py
src/backend/src/backend/models/: schemas.py
src/backend/src/backend/routers/: chat.py  health.py  models.py
src/backend/src/backend/services/: ollama.py  prompt.py
src/backend/tests/benchmarks/: bench_prompt.py
src/backend/tests/integration/: test_chat_endpoint.py  test_health_endpoint.py
src/backend/tests/unit/: test_ollama_service.py  test_prompt.py
src/chat/: CompactionStrategy.ts  ContextCompactor.ts  ConversationManager.ts  PromptBuilder.ts  PromptBuilder.types.ts  StreamingPipeline.ts  types.ts
src/commands/: CommandRouter.ts
src/config/: PromptBudget.ts  settings.ts
tests/: setup.ts
(+96 files in other folders)
